2016-07-23  Jason Merrill  <jason@redhat.com>

	PR c++/71738
	* pt.c (lookup_template_class_1): Handle getting template from tsubst.

	PR c++/71350
	* decl.c (reshape_init_r): Check complain for missing braces warning.

2016-07-22  Jason Merrill  <jason@redhat.com>

	PR c++/71576
	* call.c (convert_like_real): Use lvalue_kind.

	PR c++/71748
	PR c++/52746
	* pt.c (tsubst_baselink): Call
	adjust_result_of_qualified_name_lookup for unqualified
	destructors.

2016-07-21  Jason Merrill  <jason@redhat.com>

	PR c++/69223
	* semantics.c (apply_deduced_return_type): Call
	complete_type_or_else before building the new RESULT_DECL.

	PR c++/71274
	* decl2.c (maybe_instantiate_decl): Split out from mark_used.
	(decl_constant_var_p): Use it instead.

	PR c++/71630
	* pt.c (instantiate_decl): Fix pattern_defined for namespace scope
	variable templates.

	PR c++/71913
	* call.c (unsafe_copy_elision_p): It's OK to elide when
	initializing an unknown object.

	* call.c (build_over_call): Check unsafe_copy_elision_p even for
	trivial constructors.
	* method.c (do_build_copy_constructor): Don't copy tail padding
	even in a trivial constructor.

2016-07-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71728
	* constexpr.c (potential_constant_expression_1) <case GOTO_EXPR>:
	Replace assert with test, return false if the goto isn't break
	or continue.  Formatting fix.

2016-07-21  Richard Biener  <rguenther@suse.de>

	* vtable-class-hierarchy.c (vtv_generate_init_routine): Set
	DECL_IGNORED_P.

2016-07-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71941
	* cp-gimplify.c (cp_genericize): For nested cp_genericize calls
	save/restore bc_label array.

2016-07-21  Jason Merrill  <jason@redhat.com>

	PR c++/70781
	* parser.c (cp_parser_lambda_expression): Unset OK if there was an
	error parsing the lambda-declarator.

	PR c++/71896
	* constexpr.c (cxx_eval_binary_expression): Handle comparison
	between lowered and unlowered PTRMEM_CST.

	PR c++/65168